# python-pbt-eval

./: .gitignore  .gitmodules  README.md
mutation-testing/: README.md  mutation_testing_info.txt  mutmut_config.py  pyproject.toml  requirements_for_repos.txt  run_mutation_testing.sh
mutation-testing/data/: corr_table.csv  loc.txt  mut_stats.csv  param_sweep_times_df.csv  project_sizes_lines.csv  tested_detections.csv  total_tests.csv
mutation-testing/repositories/: download_repos.sh  repository_list.csv  repository_urls.txt
mutation-testing/repositories/diffs/: Harmonbot.diff  aiosmtplib.diff  anonlink.diff  argon2-cffi.diff  buku.diff  chalice.diff  chopsticks.diff  cloudformation-cli-python-plugin.diff  corrscope.diff  cyberpandas.diff  datacube.diff  dc_stat_think.diff  dsntnn.diff  elm-ops-tooling.diff  eth-keys.diff  fklearn.diff  forgi.diff  glue.diff  (+4 more)
pbt-classification/: README.md  env_setup.sh  pyproject.toml
pbt-classification/analysis/: figures.ipynb  rq1.py
pbt-classification/corpus/: add_commits.py  cleaned_new_examples.csv  cleaned_new_examples.pkl  github_output.txt  hypothesis_uses_raw.csv  hypothesis_uses_with_commit.csv  hypothesis_uses_with_commit.pkl  new_corpus.sh  repos_commits.csv
pbt-classification/hypothesis_analysis/: analyze_new_corpus.py  ast_utils.py  bounds_check_detectors.py  collect_data.py  comm_detectors.py  const_detectors.py  detector_utils.py  dfa_utils.py  get_files.py  pbt_detectors.py  roundtrip_detectors.py
pbt-classification/original_data/: github_output.txt  original_detections.csv  original_testset_detections.csv
(+87 files in other folders)
